# spacestest-v0-mvp

./: CLAUDE_SETUP.md  README.md  RESTART_INSTRUCTIONS.md  package-lock.json  package.json  technical_architecture.md
backend/: .gitignore  CLIP_INTEGRATION_README.md  README.md  affiliate_client.py  check_sdk.py  claude_client.py  cli.py  clip_client.py  data_manager.py  exa_client.py  furniture_detector.py  gemini_client.py  logger_config.py  main.py  models.py  openai_client.py  pyproject.toml  requirements.txt  search_utils.py  serp_client.py  spatial_utils.py  test_clip.py  test_furniture_detection.py  test_furniture_detector.py  test_furniture_pipeline.py  test_gemini_gen.py  test_pipeline_e2e.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/affiliate-cart/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/components/: ColorPaletteScreen.tsx  ColorSchemeSelector.tsx  FurnitureIdentificationPanel.tsx  GeneratedImageDisplay.tsx  ImageLightbox.tsx  ImageMarkerInterface.tsx  ImageUploadSection.tsx  InspirationImageUpload.tsx  InspirationRecommendations.tsx  InspirationRedesignDisplay.tsx  LabelledImageDisplay.tsx  MarkerRecommendations.tsx  PreferredStoresScreen.tsx  ProductRecommendations.tsx  ProductSearchResults.tsx  ProjectContext.tsx  ProjectDetails.tsx  ProjectHeader.tsx  ProjectsList.tsx  SpaceTypeDisplay.tsx  SpaceTypeSelection.tsx  StyleSelectionScreen.tsx  StyleSelector.tsx
frontend/src/lib/: api.ts
